--- a/html/investment.html
+++ b/html/investment.html
@@ -6,5 +6,80 @@
     </head>
     <body>
 
+        <div id="wrap">
+            <div id="contentWrap">
+                <div class="content">
+                    <ul>
+                        <li>
+                            <p>담당자</p>
+                            <input type="text" name="" value="">
+                        </li>
+                        <li>
+                            <p>이메일</p>
+                            <input type="email" name="" value="">
+                        </li>
+                        <li>
+                            <p>전화번호</p>
+                            <input type="tel" name="" value="">
+                        </li>
+                    </ul>
+
+                    <ul>
+                        <li>
+                            <p>상호명</p>
+                            <input type="text" name="" value="">
+                        </li>
+                        <li>
+                            <p>사업자등록번호</p>
+                            <input type="number" name="" value="">
+                        </li>
+                        <li>
+                            <p>설립일자</p>
+                            <input type="date" name="" value="">
+                        </li>
+                        <li>
+                            <p>사업형태</p>
+                            <input type="text" name="" value="">
+                        </li>
+                        <li>
+                            <p>기업 업태 및 종목</p>
+                            <input type="text" name="" value="">
+                        </li>
+                        <li>
+                            <p>대표번호</p>
+                            <input type="tel" name="" value="">
+                        </li>
+                        <li>
+                            <p>본사주소</p>
+                            <input type="text" name="" value="">
+                        </li>
+                        <li>
+                            <p>홈페이지</p>
+                            <input type="url" name="" value="">
+                        </li>
+                    </ul>
+
+                    <ul>
+                        <li>
+                            <p>사업계획서 첨부</p>
+                            <input type="file" name="" value="">
+                        </li>
+                        <li>
+                            <p>프로젝트(상품) 명</p>
+                            <input type="text" name="" value="">
+                        </li>
+                        <li>
+                            <p>프로젝트(상품) 목적</p>
+                            <input type="text" name="" value="">
+                        </li>
+                        <li>
+                            <p>비고</p>
+                            <input type="text" name="" value="">
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
     </body>
 </html>
